# Pulse

./: .gitattributes  .gitignore  CMakeLists.txt  CODEX.md  Makefile  README.md  app.go  core_process_other.go  core_process_windows.go  go.mod  go.sum  main.go  run.cmd  system_integration_other.go  system_integration_windows.go  wails.json  wsl-build-android.sh  wsl-gradle-build.sh
.github/workflows/: build-android.yml  build.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
android/native/: build-android.sh  collect-binaries.sh
android/native/pulsecore/: main.go
android/scripts/: build-apk.sh  download-mmdb.sh
cmd/pulse-service/: embedded_core_stub_windows.go  embedded_core_windows.go  main_windows.go
config/: config.toml.example  subscription.toml.example
frontend/: index.html  package-lock.json  package.json  package.json.md5
frontend/src/: App.css  App.tsx  api.ts  i18n.ts  style.css  types.ts
frontend/src/components/: CustomRulesEditor.tsx  YamlEditor.tsx  common.tsx  pagination.tsx
frontend/src/pages/: ConnectionsPage.tsx  DashboardPage.tsx  LogsPage.tsx  NodeEditorModal.tsx  ProfilesPage.tsx  ProxiesPage.tsx  RelayChainModal.tsx  RulesPage.tsx  SettingsPage.tsx  TunPage.tsx
frontend/src/pages/dashboard/: NetworkSpeedCard.tsx
frontend/src/pages/settings/: AppearanceSettingsPanel.tsx  AutoSaveField.tsx  CoreSettingsPanel.tsx  (+2 more)
frontend/wailsjs/go/: models.ts
internal/pulse/: app.go  core_process_other.go  core_process_windows.go  embedded_core_mihomo.go  embedded_core_service_windows.go  geodata.go  github_client.go  service_helper_embed_windows.go  service_helper_external.go  single_instance_other.go  single_instance_windows.go  startup_service_app_embedded_stub_windows.go  startup_service_assets_windows.go  startup_service_helper_windows.go  startup_service_other.go  startup_service_windows.go  system_integration_other.go  system_integration_windows.go  system_integration_windows_test.go  tray.go  tray_darwin.go  tray_darwin.m  tray_icon_other.go  tray_icon_windows.go  tun_config_test.go  updates.go  updates_test.go
scripts/: build-android-wsl.ps1  build.ps1  build_linux_deps.sh  sync_third_party.sh
src/: platform.h  proxy.h  vless.h
src/app/: main.c
src/core/: android_tls_align.c  mmdb.c  mmdb.h  platform.h  proxy.h  pulse.c  pulse.h  socket_io.c
src/inbounds/: server.c
src/manager/: config.c  subscription.c
src/outbounds/: anytls.c  hysteria2.c  protocol_helpers.c  protocol_helpers.h  shadowsocks.c  stream.c  stream.h  stubs.c  trojan.c  vless.c  vmess.c
(+74 files in other folders)
